# hed

./: CHANGELOG.md  CONTRIBUTING.md  README.md  justfile  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: release.yml  tests.yml
changelog.d/: 10.fix.md  11.feat.1.md  11.feat.md  12.feat.1.md  12.feat.md  12.other.md  13.feat.md  15.feat.md  5.feat.1.md  5.feat.md  template.md.jinja
src/hed/: __main__.py  cli.py  config.py  console.py  git.py  markdown.py  operations.py
tests/: test_cli.py
